# notter-backend

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile.devcontainer  Dockerfile.postgres  devcontainer.Dockerfile  devcontainer.json  docker-compose.yml  initdb_citext.sh  install-goose.sh  postgres.Dockerfile
.devcontainer/pdm-shell/: devcontainer-feature.json  install.sh
.github/workflows/: workflow.yml
migrations/: 20240520223454_users.sql  20240526184238_notes.sql
src/: __init__.py  app.py  main.py
src/auth/adapters/: argon2_password_hasher.py  errors.py  py_jwt_manager.py
src/auth/adapters/repositories/postgres/: postgres_user_repository.py
src/auth/domain/: entities.py
src/auth/domain/entities/: user.py
src/auth/drivers/rest/: dependencies.py  exception_handlers.py  router.py
src/auth/ports/: jwt_manager.py  password_hasher.py
src/auth/ports/repositories/: user_repository.py
src/auth/use_cases/: authenticate_use_case.py  create_user_use_case.py  errors.py  get_user_from_token_use_case.py  inputs.py  output.py  outputs.py  update_user_use_case.py
src/common/: datetime.py  settings.py  types.py
src/common/adapters/: errors.py
src/common/adapters/postgres/: postgres_repository.py  singleton_async_pool.py
src/common/drivers/rest/: create_error_handler.py  dependencies.py  lifespan.py  lifespans.py  model_validate.py  router.py
src/core/adapters/postgres/: postgres_unit_of_work.py
src/core/adapters/postgres/repositories/: __init__.py  postgres_category_repository.py  postgres_note_category_repository.py  postgres_note_repository.py
src/core/adapters/repositories/postgres/: postgres_note_category_repository.py  postgres_note_repository.py
src/core/domain/: entities.py
src/core/drivers/rest/: dependencies.py  exception_handlers.py  requests.py  router.py
src/core/ports/: unit_of_work.py
src/core/ports/repositories/: category_repository.py  note_category_repository.py  note_repository.py
src/core/use_cases/: create_category_use_case.py  errors.py  inputs.py  outputs.py
tests/: conftest.py  test_sanity.py
tests/auth/adapters/: test_argon2_password_hasher.py  test_py_jwt_manager.py
tests/auth/adapters/repositories/: test_postgres_user_repository.py
tests/auth/builders/domain/entities/: user_builder.py
tests/auth/builders/ports/: token_payload_builder.py
tests/auth/builders/use_cases/inputs/: create_user_input_builder.py
tests/auth/drivers/rest/: test_get_profile.py  test_post_profile.py  test_post_signup.py  test_profile.py  test_signup.py  test_token.py
tests/auth/helpers/: auth_database_client.py  auth_http_client.py  generate_token.py
tests/core/adapters/postgres/: test_postgres_unit_of_work.py
tests/core/adapters/postgres/repositories/: test_note_category_repository.py  test_postgres_category_repository.py  test_postgres_note_repository.py
tests/core/builders/domain/entities/: category_builder.py  note_builder.py  note_category_builder.py
tests/core/helpers/: core_database_client.py
tests/helpers/: builder.py  database_client.py  database_test.py  server_test.py
